Camera is its own module

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "primo-events": "~1.0.0",
     "underscore": "~1.4.3",
-    "primo-audio": "0.0.6"
+    "primo-audio": "0.0.6",
+    "primo-camera": "~0.0.0"
   }
 }
