--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "underscore": "~1.4.3",
     "primo-audio": "0.0.6",
     "primo-camera": "~0.0.0",
-    "primo-canvas": "~0.0.0"
+    "primo-canvas": "~0.0.0",
+    "primo-spritemap": "0.0.0"
   }
 }
