--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/robashton/primo-core.git"
+    "url": "git://github.com/robashton/primojs.git"
   },
   "keywords": [
     "game",
