Added utils deps

--- a/package.json
+++ b/package.json
@@ -21,15 +21,12 @@
   "dependencies": {
     "primo-events": "~1.0.0",
     "underscore": "~1.4.3",
-    "primo-audio": "0.0.6",
+    "primo-audio": "~0.0.6",
     "primo-camera": "~0.0.0",
     "primo-canvas": "~0.0.0",
-    "primo-spritemap": "0.0.0",
-    "primo-counter": "0.0.0",
-    "primo-timer": "0.0.0"
-  },
-  "optionalDependencies": {
-    "primo-animation": "",
-    "primo-rigidbody": ""
+    "primo-spritemap": "~0.0.0",
+    "primo-counter": "~0.0.0",
+    "primo-timer": "~0.0.0",
+    "primo-utils": ""
   }
 }
