--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
   "author": "Rob Ashton",
   "license": "MIT",
   "dependencies": {
-    "primo-events": "~1.0.0",
-    "underscore": "~1.4.3",
-    "primo-audio": "~0.0.6",
-    "primo-camera": "~0.0.0",
-    "primo-canvas": "~0.0.0",
-    "primo-spritemap": "~0.0.0",
-    "primo-counter": "~0.0.0",
-    "primo-timer": "~0.0.0",
+    "primo-events": "",
+    "underscore": "",
+    "primo-audio": "",
+    "primo-camera": "",
+    "primo-canvas": "",
+    "primo-spritemap": "",
+    "primo-counter": "",
+    "primo-timer": "",
     "primo-utils": ""
   }
 }
